# Local_Chat_Project-Qt

./: ReadMe.md
ConsoleChat/: Chat_Project.slnx
ConsoleChat/Chat_Project/: Chat_Project.cpp  Chat_Project.h  Chat_Project.vcxproj  Chat_Project.vcxproj.filters  main.cpp
ConsoleChat/Chat_Project/Chat_Project/Debug/: Chat_Project.ilk  vChat_Project.exe.recipe  vc145.idb
ConsoleChat/Chat_Project/Chat_Project/Debug/Chat_Project.tlog/: CL.command.1.tlog  CL.write.2.tlog  Chat_Project.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.secondary.1.tlog
ConsoleChat/Chat_Project/Debug/: Chat_Project.exe.recipe  Chat_Project.ilk  Chat_Project.vcxproj.FileListAbsolute.txt  vc145.idb
ConsoleChat/Chat_Project/Debug/Chat_Project.tlog/: CL.command.1.tlog  CL.write.3.tlog  Chat_Project.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.secondary.1.tlog
ConsoleChat/Chat_Project/x64/Debug/: Chat_Project.ilk  vChat_Project.exe.recipe  vc145.idb
ConsoleChat/Chat_Project/x64/Debug/Chat_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chat_Project.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
QtChat/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
